--- a/package.json
+++ b/package.json
@@ -24,20 +24,21 @@
   "homepage": "https://github.com/SliskiPlumek/shop-api#readme",
   "dependencies": {
     "@apollo/server": "^4.7.5",
-    "@plumek/jwt-auth-express": "^1.1.2",
+    "@plumek/jwt-auth-express": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "firebase": "^9.23.0",
+    "express-validator": "^7.0.1",
     "firebase-admin": "^11.9.0",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1",
-    "multer": "^1.4.5-lts.1"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2",
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^1.14.9"
   }
 }
