--- a/package.json
+++ b/package.json
@@ -25,20 +25,34 @@
   "dependencies": {
     "@apollo/server": "^4.7.5",
     "@plumek/jwt-auth-express": "^1.1.3",
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.2",
     "express-validator": "^7.0.1",
     "firebase-admin": "^11.9.0",
+    "googleapis": "^122.0.0",
     "graphql": "^16.7.1",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-rate-limit": "^3.3.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
+    "stripe": "^12.13.0",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
     "dotenv": "^16.3.1",
-    "nodemon": "^1.14.9"
+    "mocha": "^10.2.0",
+    "nodemon": "^1.14.9",
+    "sinon": "^15.2.0"
   }
 }
