--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql-rate-limit": "^3.3.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.1",
+    "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
     "mongoose": "^7.3.2",
     "multer": "^1.4.5-lts.1",
