--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "e-commerce shop api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "mocha"
+    "start": "node app.js",
+    "test": "mocha",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -38,10 +39,12 @@
     "graphql-depth-limit": "^1.1.0",
     "graphql-rate-limit": "^3.3.0",
     "graphql-tag": "^2.12.6",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
     "mongoose": "^7.3.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "stripe": "^12.13.0",
@@ -53,7 +56,7 @@
     "chai-http": "^4.4.0",
     "dotenv": "^16.3.1",
     "mocha": "^10.2.0",
-    "nodemon": "^1.14.9",
+    "nodemon": "^3.0.1",
     "sinon": "^15.2.0"
   }
 }
